--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ HomePage - CalculatorApp
 Welcome to this calculator designed by
 </h1>
 <div>
-<tag id="name"><b id="blue">T</b><b id="green">I</b><b id="red">M</b><b id="turquoise">U</b><b id="purple">R</b></tag> <button id="youtube" onclick="window.open('https://www.youtube.com/channel/UCuyihpzyyPeJDjn1IfDOqJg','_blank')"><img src="https://cdn.icon-icons.com/icons2/1211/PNG/512/1491580647-yumminkysocialmedia18_83093.png" height="50" width="50" /></button>
+<tag id="name"><b id="blue">T</b><b id="green">I</b><b id="red">M</b><b id="turquoise">U</b><b id="purple">R</b></tag> <button id="youtube" onclick="window.open('https://www.youtube.com/channel/UCuyihpzyyPeJDjn1IfDOqJg','_blank')"><img src="./Social.png" height="50" width="50" /></button>
 
 </div>
 <div id="awnser">first number
