--- a/Draw.html
+++ b/Draw.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-  <button id="back" onclick="window.location.href='../index.html';" ><image src="https://i.ibb.co/zX8dHjG/pngtree-vector-left-arrow-icon-png-image-925725-removebg-preview.png" height="50px" width="50px"/></button>
+  <button id="back" onclick="window.location.href='./index.php';" ><image src="https://i.ibb.co/zX8dHjG/pngtree-vector-left-arrow-icon-png-image-925725-removebg-preview.png" height="50px" width="50px"/></button>
 <!-- partial:index.partial.html -->
 <canvas id="canvas"></canvas>
 <!-- partial -->
